--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/content-style.css">
+		<link rel="stylesheet" href="css/main.css">
 		<script type="text/javascript" src="js/jquery-2.2.1.min.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	</head>
