--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 	<body>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-lg-3"></div>
-				<main id="main-content">
+				<div class="col-lg-3">
 					
-				</main>
+				</div>
+				<div class="col-ld-9">
+					<main id="main-content">
+						
+					</main>
+				</div>
 			</div>
 		</div>
 		<script type="text/javascript">
