--- a/content-contacts.html
+++ b/content-contacts.html
@@ -1,6 +1,6 @@
 	<div class="background">
 	</div>
 <div class="row">
-	<div class="col-lg-1"><a href="#" title="#"></a> > </div>
-	<div class="col-lg-1"><a href="#" title="#"></a></div>
+	<div class="col-lg-1"><a href="#" title="#" class="accent-text">Главная</a> > </div>
+	<div class="col-lg-1"><a href="#" title="#">Контакты</a></div>
 </div>
