left-bar skeleton

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/content-style.css">
 		<link rel="stylesheet" href="css/main.css">
@@ -10,10 +11,19 @@
 	<body>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-lg-2">
-					
+				<div class="col-lg-2 left-bar no-padding">
+					<div class="logo-wrapper">
+						<div class="logo"></div>
+					</div>
+					<div class="nav-left">
+						<ul id="pvh">
+							<span><img src="img/pvh-icon.png">Изделия из ПВХ</span>
+							<li>Оконные системы</li>
+							<li>Дверные системы</li>
+						</ul>
+					</div>
 				</div>
-				<div class="col-lg-10">
+				<div class="col-lg-10 no-padding">
 					<main id="main-content">
 						
 					</main>
