Primary-text and new html(row), add 2 link

--- a/content-contacts.html
+++ b/content-contacts.html
@@ -1,6 +1,5 @@
 	<div class="background">
+		<div class="row">
+			<div class="col-lg-1"><h6><a href="#" title="#" class="accent-text">Главная</a>><a href="#" title="#" class="primory-text">Контакты</a><h6></div>
+		</div>
 	</div>
-<div class="row">
-	<div class="col-lg-1"><a href="#" title="#" class="accent-text">Главная</a> > </div>
-	<div class="col-lg-1"><a href="#" title="#">Контакты</a></div>
-</div>
