new contacnts, primaty-text

--- a/content-contacts.html
+++ b/content-contacts.html
@@ -1,5 +1,13 @@
-	<div class="background">
+	<div class="background padding">
 		<div class="row">
-			<div class="col-lg-1"><h6><a href="#" title="#" class="accent-text">Главная</a>><a href="#" title="#" class="primory-text">Контакты</a><h6></div>
+			<div class="col-lg-1"><h6><a href="#" title="#" class="accent-text">Главная</a>><a href="#" title="#" class="primary-text">Контакты</a><h6></div>
+		</div>
+		<div class="row">
+			<div class="col-lg-5">
+				<p><img src="img/icon_phone.png" style="float:left;"><b> &nbsp &nbsp+380-51-XXX-XX-XX</b> | Центральный офис</p>
+				<p><img src="img/icon_smartphone.png" style="float:left;"><b> &nbsp &nbsp+380-93-XXX-XX-XX</b> | Сервисный центр</p>
+				<p><img src="img/icon_smartphone.png" style="float:left;"><b> &nbsp &nbsp+380-67-XXX-XX-XX</b> | Консультант</p>
+			</div>
+			<div class="col-lg-7 back-black"></div>
 		</div>
 	</div>
