--- a/content-contacts.html
+++ b/content-contacts.html
@@ -4,10 +4,32 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-5">
+				<p><h3>Наши контакты</h3></p>
 				<p><img src="img/icon_phone.png" style="float:left;"><b> &nbsp &nbsp+380-51-XXX-XX-XX</b> | Центральный офис</p>
 				<p><img src="img/icon_smartphone.png" style="float:left;"><b> &nbsp &nbsp+380-93-XXX-XX-XX</b> | Сервисный центр</p>
 				<p><img src="img/icon_smartphone.png" style="float:left;"><b> &nbsp &nbsp+380-67-XXX-XX-XX</b> | Консультант</p>
 			</div>
-			<div class="col-lg-7 back-black"></div>
+			<div class="col-lg-6 back-black">
+				<p><h3>Связаться с нами</h3></p>
+				<div class="row">
+					<div class="col-lg-6 mg">
+						<div class="input-group-lg bg-width">
+						  <input type="text" class="form-control" placeholder="Username">
+						</div>
+					</div>
+					<div class="col-lg-6 mg">
+						<div class="input-group-lg bg-width">
+						  <input type="text" class="form-control" placeholder="Username">
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-12 mg">
+						<div class="input-group-lg bg-width">
+						  <input type="text" class="form-control" placeholder="Username">
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
