--- a/index.html
+++ b/index.html
@@ -17,9 +17,28 @@
 					</div>
 					<div class="nav-left">
 						<ul id="pvh">
-							<span><img src="img/pvh-icon.png">Изделия из ПВХ</span>
+							<img src="img/pvh-icon.png"><span>Изделия из ПВХ</span>
 							<li>Оконные системы</li>
 							<li>Дверные системы</li>
+						</ul>
+						<ul id="aluminium">
+							<span class="accent-text"><img src="img/aluminium-icon-active.png">Изделия из Алюминия</span>
+							<li>Перильные ограждения</li>
+							<li>Окна и двери</li>
+							<li>Зимние сады</li>
+							<li>Пирамиды</li>
+						</ul>
+						<ul id="balcony">
+							<span><img src="img/balcony-icon.png">Балконы и лоджии</span>
+						</ul>
+						<ul id="blinds">
+							<span><img src="img/blinds-icon.png">Роллетные системы</span>
+						</ul>
+						<ul id="gates">
+							<span><img src="img/gates-icon.png">Ворота и автоматика</span>
+						</ul>
+						<ul id="facade">
+							<span><img src="img/facade-icon.png">Вентилируемие<br>фасадные системы</span>
 						</ul>
 					</div>
 				</div>
@@ -32,7 +51,7 @@
 		</div>
 		<script type="text/javascript">
 			$(document).ready(function(){
-				$("main#main-content").load("content-contacts.html");
+				$("main#main-content").load("objects.html");
 			});
 		</script>
 	</body>
