--- a/content-contacts.html
+++ b/content-contacts.html
@@ -9,27 +9,47 @@
 				<p><img src="img/icon_smartphone.png" style="float:left;"><b> &nbsp &nbsp+380-93-XXX-XX-XX</b> | Сервисный центр</p>
 				<p><img src="img/icon_smartphone.png" style="float:left;"><b> &nbsp &nbsp+380-67-XXX-XX-XX</b> | Консультант</p>
 			</div>
+
 			<div class="col-lg-6 back-black">
+
 				<p><h3>Связаться с нами</h3></p>
+
 				<div class="row">
 					<div class="col-lg-6 mg">
 						<div class="input-group-lg bg-width">
-						  <input type="text" class="form-control" placeholder="Username">
+						  <input type="text" class="form-control" placeholder="Ваше имя">
 						</div>
 					</div>
+
 					<div class="col-lg-6 mg">
 						<div class="input-group-lg bg-width">
-						  <input type="text" class="form-control" placeholder="Username">
+						  <input type="text" class="form-control" placeholder="Ваш телефон">
 						</div>
 					</div>
 				</div>
+
 				<div class="row">
 					<div class="col-lg-12 mg">
 						<div class="input-group-lg bg-width">
-						  <input type="text" class="form-control" placeholder="Username">
+						  <input type="text" class="form-control" placeholder="Ваш e-mail">
 						</div>
 					</div>
 				</div>
+
+				<div class="row">
+					<div class="col-lg-12 mg">
+						<div class="input-group-lg bg-width">
+						  <textarea class="form-control" style="height: 90px;" placeholder="Ваше сообщение"></textarea>
+						</div>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-lg-12 mg">
+						<button type="button" class="btn accent btn-lg btn-block">Отправить сообщение</button>
+					</div>
+				</div>
+
 			</div>
 		</div>
 	</div>
