--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					</div>
 					<div class="nav-left">
 						<ul id="pvh">
-							<img src="img/pvh-icon.png"><span>Изделия из ПВХ</span>
+							<span><img src="img/pvh-icon.png">Изделия из ПВХ</span>
 							<li>Оконные системы</li>
 							<li>Дверные системы</li>
 						</ul>
@@ -51,7 +51,7 @@
 		</div>
 		<script type="text/javascript">
 			$(document).ready(function(){
-				$("main#main-content").load("objects.html");
+				$("main#main-content").load("content-contacts.html");
 			});
 		</script>
 	</body>
