--- a/content-contacts.html
+++ b/content-contacts.html
@@ -4,15 +4,23 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-5">
-				<p><h3>Наши контакты</h3></p>
-				<p><img src="img/icon_phone.png" style="float:left;"><b> &nbsp &nbsp+380-51-XXX-XX-XX</b> | Центральный офис</p>
-				<p><img src="img/icon_smartphone.png" style="float:left;"><b> &nbsp &nbsp+380-93-XXX-XX-XX</b> | Сервисный центр</p>
-				<p><img src="img/icon_smartphone.png" style="float:left;"><b> &nbsp &nbsp+380-67-XXX-XX-XX</b> | Консультант</p>
+				<p><h2>Наши контакты</h2></p>
+				<p><img src="img/icon_phone.png" style="float:left;"><h4><b> &nbsp &nbsp+380-51-XXX-XX-XX</b> | Центральный офис</h4></p>
+				<p><img src="img/icon_smartphone.png" style="float:left;"><h4><b> &nbsp &nbsp+380-93-XXX-XX-XX</b> | Сервисный центр</h4></p>
+				<p><img src="img/icon_smartphone.png" style="float:left;"><h4><b> &nbsp &nbsp+380-67-XXX-XX-XX</b> | Консультант</h4></p>
+				<p>&nbsp</p>
+				<p>&nbsp</p>
+				<p>&nbsp</p>
+				<p>&nbsp</p>
+				<div class="addres">
+					<h2>Наш адресс</h2>
+					<p><img src="img/icon_location.png" style="float:left;"><b> &nbsp &nbspг. Николаев, ул. Спасская, 72</b></p>
+				</div>
 			</div>
 
 			<div class="col-lg-6 back-black">
 
-				<p><h3>Связаться с нами</h3></p>
+				<p><h2>Связаться с нами</h2></p>
 
 				<div class="row">
 					<div class="col-lg-6 mg">
@@ -49,7 +57,13 @@
 						<button type="button" class="btn accent btn-lg btn-block">Отправить сообщение</button>
 					</div>
 				</div>
-
-			</div>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-lg-1">
+		</div>
+		<div class="col-lg-10">
+			<img src="img/map.png" style="float:left;">
+		</div>
+	</div>
+</div>
