--- a/index.html
+++ b/index.html
@@ -43,11 +43,35 @@
 					</div>
 				</div>
 				<div class="col-lg-10 no-padding">
+					<nav class="background">
+						<div class="wrapper">
+							<a href="#"><img src="img/ic_menu_48px.png"> Производство</a>
+							<a href="#">Услуги</a>
+							<a href="#">Галерея работ</a>
+							<a href="#">Акции</a>
+							<a href="#">Новости</a>
+							<a href="#">Контакты</a>
+							<span class="bold">+38 (067) 123 45 67</span>
+							<span class="btn accent">Перезвоните мне</span>
+						</div>
+					</nav>
 					<main id="main-content">
 						
 					</main>
 				</div>
+					<div class="metr accent col-lg-2">
+						<div class="wrapper">
+							<img src="img/icon_roulette.png">
+							<span>Вызвать замерщика</span>
+						</div>
+					</div>
 			</div>
+			<footer class="row">
+
+				<div class="col-lg-10">
+					
+				</div>
+			</footer>
 		</div>
 		<script type="text/javascript">
 			$(document).ready(function(){
