--- a/objects.html
+++ b/objects.html
@@ -114,14 +114,14 @@
 			</div>
 			<div class="col-lg-4">
 				<ul class="pagination slider-1 primary-text">
-  <li><a href="#" class="primary-text"><</a></li>
-  <li><a href="#">1</a></li>
-  <li><a href="#">2</a></li>
-  <li><a href="#">3</a></li>
-  <li><a href="#">4</a></li>
-  <li><a href="#">5</a></li>
-  <li><a href="#">></a></li>
-</ul>
+ 					<li><a href="#"><</a></li>
+				    <li><a href="#" style="color:#d33333">1</a></li>
+					<li><a href="#">2</a></li>
+					<li><a href="#">3</a></li>
+					<li><a href="#">4</a></li>
+					<li><a href="#">5</a></li>
+					<li><a href="#">></a></li>
+				</ul>
 			</div>
 		</div>
 </div>
