--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	</head>
 	<body>
-		<div class="container-fluid">
-			<div class="row">
+		<div class="main-container">
+			<div class="row main-row">
 				<div class="col-lg-2 left-bar no-padding">
 					<div class="logo-wrapper">
 						<div class="logo"></div>
@@ -48,13 +48,13 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-10 no-padding">
-					<nav class="background">
+				<div class="col-lg-10 background">
+					<nav>
 						<div class="wrapper">
 							<a href="#"><img src="img/ic_menu_48px.png"> Производство</a>
 							<a href="#">Услуги</a>
-							<a href="#">Галерея работ</a>
-							<a href="#">Акции</a>
+							<a href="#objects">Галерея работ</a>
+							<a href="#some-discount">Акции</a>
 							<a href="#some-news">Новости</a>
 							<a href="#content-contacts">Контакты</a>
 							<span class="bold">+38 (067) 123 45 67</span>
@@ -64,14 +64,13 @@
 					<main id="main-content">
 						
 					</main>
+					<footer>
+						<div class="row">
+							<span class="col-lg-3">Сайт разработано<br> в веб-студии igmish.com</span>
+						</div>
+					</footer>
 				</div>
 			</div>
-			<footer class="row">
-
-				<div class="col-lg-10">
-					
-				</div>
-			</footer>
 		</div>
 		<script type="text/javascript">
 			$(document).ready(function(){
