--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		</div>
 		<script type="text/javascript">
 			$(document).ready(function(){
-				$("main#main-content").load("some-news.html");
+				$("main#main-content").load("news.html");
 			});
 		</script>
 	</body>
