--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<a href="#">Услуги</a>
 							<a href="#objects">Галерея работ</a>
 							<a href="#some-discount">Акции</a>
-							<a href="#some-news">Новости</a>
+							<a href="#news">Новости</a>
 							<a href="#content-contacts">Контакты</a>
 							<span class="bold">+38 (067) 123 45 67</span>
 							<span class="btn accent">Перезвоните мне</span>
