--- a/news.html
+++ b/news.html
@@ -6,7 +6,8 @@
 				<a href="#" title="#" class="primary-text">Новости</a>
 			</h6>
 		</div>
-		<div class="row">
+	</div>
+		<div class="row" id="padding-top">
 			<div class="col-lg-2">
 				<img src="img/news1.png" style="float:left;"/>
 			</div>
@@ -20,6 +21,50 @@
 			<div class="col-lg-2">
 				<img src="img/data.png" style="float:left; padding-top:7px; padding-right:5px;"/> <h4 class="">25.01.16</h4>
 			</div>
-		</div>
+	</div>
+	<div class="row" id="padding-top">
+			<div class="col-lg-2">
+				<img src="img/news1.png" style="float:left;"/>
+			</div>
+			<div class="col-lg-8">
+				<h4>Фурнитурная система proPilot</h4>
+				<p>Комплектация фурнитурной системы proPilot разработана компанией Winkhaus специально для компании Европласт. Данную фурнитуру Вы можете выбрать в программе WHokna.</p>
+				<p>Главная задача введения данной фурнитурной системы - это возможность формирования гибкой ценовой политики по отношению к Вашим частным заказчикам.
+				</p>
+				<a href="#" title="#" class="accent-text">Читать дальше></a>
+			</div>
+			<div class="col-lg-2">
+				<img src="img/data.png" style="float:left; padding-top:7px; padding-right:5px;"/> <h4 class="">25.01.16</h4>
+			</div>
+	</div>
+	<div class="row" id="padding-top">
+			<div class="col-lg-2">
+				<img src="img/news1.png" style="float:left;"/>
+			</div>
+			<div class="col-lg-8">
+				<h4>Фурнитурная система proPilot</h4>
+				<p>Комплектация фурнитурной системы proPilot разработана компанией Winkhaus специально для компании Европласт. Данную фурнитуру Вы можете выбрать в программе WHokna.</p>
+				<p>Главная задача введения данной фурнитурной системы - это возможность формирования гибкой ценовой политики по отношению к Вашим частным заказчикам.
+				</p>
+				<a href="#" title="#" class="accent-text">Читать дальше></a>
+			</div>
+			<div class="col-lg-2">
+				<img src="img/data.png" style="float:left; padding-top:7px; padding-right:5px;"/> <h4 class="">25.01.16</h4>
+			</div>
+	</div>
+	<div class="row"  id="padding-top">
+			<div class="col-lg-2">
+				<img src="img/news1.png" style="float:left;"/>
+			</div>
+			<div class="col-lg-8">
+				<h4>Фурнитурная система proPilot</h4>
+				<p>Комплектация фурнитурной системы proPilot разработана компанией Winkhaus специально для компании Европласт. Данную фурнитуру Вы можете выбрать в программе WHokna.</p>
+				<p>Главная задача введения данной фурнитурной системы - это возможность формирования гибкой ценовой политики по отношению к Вашим частным заказчикам.
+				</p>
+				<a href="#" title="#" class="accent-text">Читать дальше></a>
+			</div>
+			<div class="col-lg-2">
+				<img src="img/data.png" style="float:left; padding-top:7px; padding-right:5px;"/> <h4 class="">25.01.16</h4>
+			</div>
 	</div>
 </div>
