--- a/discount.html
+++ b/discount.html
@@ -2,7 +2,7 @@
 	<div class="col-lg-6">
 		<h6>
 			<a href="#" title="#" class="accent-text">Главная</a>>
-			<a href="#" title="#" class="primary-text">Новости</a>
+			<a href="#" title="#" class="primary-text">Акции</a>
 		</h6>
 	</div>
 </div>
@@ -15,7 +15,7 @@
 			<p>Комплектация фурнитурной системы proPilot разработана компанией Winkhaus специально для компании Европласт. Данную фурнитуру Вы можете выбрать в программе WHokna.</p>
 			<p>Главная задача введения данной фурнитурной системы - это возможность формирования гибкой ценовой политики по отношению к Вашим частным заказчикам.
 			</p>
-			<a href="#" title="#" class="accent-text">Читать дальше></a>
+			<a href="#some-discount" title="#" class="accent-text">Читать дальше></a>
 		</div>
 		<div class="col-lg-2">
 				<img src="img/data.png" style="float:left; padding-top:7px; padding-right:5px;"/> <h4 class="">25.01.16</h4>
@@ -97,3 +97,4 @@
 			</ul>
 		</div>
 	</div>
+	
