--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<a href="#"><img src="img/ic_menu_48px.png"> Производство</a>
 							<a href="#">Услуги</a>
 							<a href="#objects">Галерея работ</a>
-							<a href="#some-discount">Акции</a>
+							<a href="#discount">Акции</a>
 							<a href="#news">Новости</a>
 							<a href="#content-contacts">Контакты</a>
 							<span class="bold">+38 (067) 123 45 67</span>
