--- a/some-news.html
+++ b/some-news.html
@@ -9,7 +9,7 @@
 </div>
 <div class="row">
 	<div class="col-lg-12">
-		<img src="img/5.png" style="float:left; padding-top:7px; padding-right:5px;"/>
+		<img src="img/5.png" style="float:left; padding-top:7px; padding-right:5px;" class="fullwidth"/>
 	</div>
 </div>
 <div class="row">
@@ -29,11 +29,11 @@
 </div>
 <div class="row">
 	<div class="col-lg-4">
-		<img src="img/3.jpg" style="float:left;"/>
+		<img src="img/3.jpg" style="float:left;" class="fullwidth"/>
 	</div>
 	<div class="col-lg-4">
-		<img src="img/2.jpg" style="float:left;"/>
+		<img src="img/2.jpg" style="float:left;" class="fullwidth"/>
 	</div>
 	<div class="col-lg-4">
-		<img src="img/1.jpg" style="float:left;"/>
+		<img src="img/1.jpg" style="float:left;" class="fullwidth"/>
 </div>
