--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="col-lg-10 background no-padding">
 					<nav>
 						<div class="wrapper">
-							<a href="#"><img src="img/ic_menu_48px.png"> Производство</a>
+							<a href="#main"><img src="img/ic_menu_48px.png"> Производство</a>
 							<a href="#">Услуги</a>
 							<a href="#objects">Галерея работ</a>
 							<a href="#discount">Акции</a>
