--- a/main.html
+++ b/main.html
@@ -1,8 +1,6 @@
-<div class="row">
-	<div class="col-lg-1">
-		<p></p>
-	</div>
-	<div class="col-lg-6 center">
-		<img src="img/1-1.png" style="width=100%;">
-	</div>
+<div class="slider-container">
+	<img src="img/slider1.png">
+	<img src="img/slider2.png">
+	<img src="img/slider3.png">
+	<img src="img/slider4.png">
 </div>
